* If pos.conf.pl is not found, now returns an intelligible error (Chris T)
* Adding action/id div to top of many screens (Chris T, h/t Erik H)
* File->get_for_template now gets most recent parts image (Chris T)
* Fixed error on generate purchase orders (Chris T, 3544857, h/t Nigel T)
* Fixed internal server errors with date parsing (Chris T, 3546698)

Changelog for 1.3.20
* Fixes for es_AR translation, duplicate keys removed (Andres B)
* Demo templates provide better handling of paragraph breaks in notes (Chris T)
* Fixed menu anomilies due to menu grants on sub-menus (Chris T)
* Fixed unable to change order or delete it (Chris T, 3535856)
* Fixed invalid syntax for integer on saving employee (Chris T)
* Cleaned up dates lines on employee screen (Chris T)
* Added access to parts.image for ar invoice, order, quote templates (Chris T)
* Fixed error on redirect from attaching file to part (Chris T h/t Brian W)
* Fixed inability to look up vendor by ECA with discounts (Erik H h/t Matt B)
* Removed broken cash-basis reports (Chris T, h/t Jigme D
* Backporting LedgerSMB::App_State to make other backports easier (Chris T)
* Fixed Customer/Vendor search results unsorted (Chris T, h/t lbm, 3537592)
* Income Statement/Balance sheet now pass through date ranges (Chris T)

Andres B is Andres Basile
Brian W is Brian Wolf
Chris T is Chris Travers
Erik H is Erik Huelsmann
Jigme D is JigmeDatse
lbm is Louis Moore
Matt B is Matthew Bourque

Changelog for 1.3.19
* New link for customer/vendor when not a dropdown (Chris T)
* Removed file debugging code from file.pl (Chris T)
* fixed can void voids. (Chris T, h/t Erik Huelsmann, item 3515561)
* Fixed error on taxable sales report (Chris T, 3531784 h/t Nigel T)
* Added missing localization calls to recon approval workflow (Chris T)
* Clarified recon approval workflow (Chris T)
* Fixed error editing non-existent localized template (Chris T, 3531738)
* Fixed show/hide logic on nav bar on Contacts screen (Chris T)